--- a/basic.ipynb
+++ b/basic.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "652cd9dc-0279-44dc-894a-1672a4dfaab9",
+   "metadata": {},
+   "source": [
+    "# Python Programming\n",
+    "\n",
+    "\n",
+    "- Data Types\n",
+    "  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "c6e5614b-5c26-4a48-a89f-06153b92308d",
@@ -177,6 +189,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a485612-16ec-40ae-b19b-9c56e9ddf9cd",
+   "metadata": {},
+   "source": [
+    "# Variable Assignment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "1c78244b-cf83-43b8-86f5-849842aec307",
@@ -255,6 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Mathematical Operation\n",
     "a= 10\n",
     "b = 20"
    ]
@@ -284,8 +305,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d692f592-85a9-4ca6-8c87-63e4de045a1e",
+   "metadata": {},
+   "source": [
+    "# Print "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8ef31c8-c19f-4c9f-8c87-68bc8a0a6464",
+   "metadata": {},
+   "source": [
+    "# Single variable\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "01366cfe-bb47-4ae8-a28e-86cf92a8e4bc",
    "metadata": {},
    "outputs": [
@@ -293,13 +330,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SSM\n"
+      "MDL\n"
      ]
     }
    ],
    "source": [
-    "s = \"SSM\"\n",
+    "s = \"MDL\"\n",
     "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f0026e-6c8a-4f70-b3c4-fbf85dbf8543",
+   "metadata": {},
+   "source": [
+    "# Multiple Variables\n"
    ]
   },
   {
@@ -343,18 +388,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "d708fc2c-ea1d-40e3-934b-6436ff9df087",
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_name = 'sahil'\n",
-    "last_name = 'mali'"
+    "first_name = 'Manjushree'\n",
+    "last_name = 'Laddha'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "f476e860-b19b-4bd7-a354-1b15df152f92",
    "metadata": {},
    "outputs": [
@@ -362,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My first name is sahil and Last name is mali\n"
+      "My first name is Manjushree and Last name is Laddha\n"
      ]
     }
    ],
@@ -372,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "b7d3453d-7815-46b4-b9f0-5823111a731e",
    "metadata": {},
    "outputs": [
@@ -380,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My first name is mali and Last name is sahil\n"
+      "My first name is Laddha and Last name is Manjushree\n"
      ]
     }
    ],
@@ -390,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "3adf6d65-6d4d-49ad-b753-f8b02aa43b67",
    "metadata": {},
    "outputs": [
@@ -398,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My first name is sahil and Last name is mali\n"
+      "My first name is Laddha and Last name is Manjushree\n"
      ]
     }
    ],
@@ -408,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "24116480-27aa-45a7-9270-052fd52c1fb4",
    "metadata": {},
    "outputs": [
@@ -416,7 +461,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My first name is sahil and Last name is mali\n"
+      "My first name is Manjushree and Last name is Laddha\n"
      ]
     }
    ],
@@ -425,8 +470,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac34b3fe-2808-4251-98c4-66535532987d",
+   "metadata": {},
+   "source": [
+    "#  Using sep and end parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc4f8e05-0f7c-41de-8c02-391da4e9db71",
+   "metadata": {},
+   "source": [
+    "## end Parameter with '@'\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "880bca89-fa24-404f-a1cc-adbb8e741520",
    "metadata": {},
    "outputs": [
@@ -445,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "f847e2cb-e05b-4461-a993-d9621a621804",
    "metadata": {},
    "outputs": [
@@ -453,12 +514,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sahil@dbatu.ac.in\n"
+      "pratik@dbatu.ac.in\n"
      ]
     }
    ],
    "source": [
-    "print('sahil', 'dbatu.ac.in', sep='@')"
+    "print('pratik', 'dbatu.ac.in', sep='@')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e897e3-b2a9-4670-8339-914fd42180ec",
+   "metadata": {},
+   "source": [
+    "## Seprating with Comma"
    ]
   },
   {
@@ -480,6 +549,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79f17bb8-d348-4924-ad07-3d8e86d8b89a",
+   "metadata": {},
+   "source": [
+    "## for formatting a date"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "0a98d4ed-acba-457f-870c-a1cd52325b43",
@@ -498,8 +575,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c00d50ca-3628-46d3-97ac-ec551a86502f",
+   "metadata": {},
+   "source": [
+    "## Using f-string"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "e9c10016-f097-45af-bfbd-af02ee35a976",
    "metadata": {},
    "outputs": [
@@ -507,14 +592,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, My name is sahil and I'm 23 years old.\n"
+      "Hello, My name is Tushar and I'm 23 years old.\n"
      ]
     }
    ],
    "source": [
-    "name = 'sahil'\n",
+    "name = 'Tushar'\n",
     "age = 23\n",
     "print(f\"Hello, My name is {name} and I'm {age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a32eccd-b3fa-4e3b-976f-a62845589462",
+   "metadata": {},
+   "source": [
+    "## Using the % Operator\n",
+    "We can use ‘%’ operator. % values are replaced with zero or more value of elements. The formatting using % is similar to that of ‘printf’ in the C programming language.\n",
+    "\n",
+    "%d –integer\n",
+    "%f – float\n",
+    "%s – string\n",
+    "%x –hexadecimal\n",
+    "%o – octal\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -539,20 +641,48 @@
     }
    ],
    "source": [
+    "# Taking input from the user\n",
     "num = int(input(\"Enter a value: \"))\n",
     "\n",
     "add = num + 5\n",
     "\n",
+    "# Output\n",
     "print(\"The sum is %d\" %add)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47b8d6c3-f3c5-41b1-a45d-0d526500889e",
+   "metadata": {},
+   "source": [
+    "## Take Multiple Input in Python\n",
+    "We are taking multiple input from the user in a single line, splitting the values entered by the user into separate variables for each value using the split() method. Then, it prints the values with corresponding labels, either two or three, based on the number of inputs provided by the user."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "485b9e12-ada1-4bdf-b365-94285621f99d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter two values:  4   8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of boys:  4\n",
+      "Number of girls:  8\n"
+     ]
+    }
+   ],
    "source": [
+    "# taking two inputs at a time\n",
     "x, y = input(\"Enter two values: \").split()\n",
     "print(\"Number of boys: \", x)\n",
     "print(\"Number of girls: \", y)"
@@ -582,10 +712,19 @@
     }
    ],
    "source": [
+    "# taking three inputs at a time\n",
     "x, y, z = input(\"Enter three values: \").split()\n",
     "print(\"Total number of students: \", x)\n",
     "print(\"Number of boys is : \", y)\n",
     "print(\"Number of girls is : \", z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "562cb2f6-0f5a-46c2-bc9b-242d04ce0635",
+   "metadata": {},
+   "source": [
+    "## Take Conditional Input from user in Python"
    ]
   },
   {
@@ -610,10 +749,13 @@
     }
    ],
    "source": [
+    "# Prompting the user for input\n",
     "age_input = input(\"Enter your age: \")\n",
     "\n",
+    "# Converting the input to an integer\n",
     "age = int(age_input)\n",
     "\n",
+    "# Checking conditions based on user input\n",
     "if age < 0:\n",
     "    print(\"Please enter a valid age.\")\n",
     "elif age < 18:\n",
@@ -625,8 +767,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bfb31b81-0cac-4986-83b9-f128c78442b2",
+   "metadata": {},
+   "source": [
+    "## Taking input in Python\n",
+    "Python input() function is used to take user input. By default, it returns the user input in form of a string."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "72e9da54-e10b-4884-b4b0-668d1f38a770",
    "metadata": {},
    "outputs": [
@@ -634,20 +785,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your name:  sahil\n"
+      "Enter your name:  MDL\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, sahil ! Welcome!\n"
+      "Hello, MDL ! Welcome!\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Enter your name: \")\n",
     "print(\"Hello,\", name, \"! Welcome!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "323dfa02-afb3-4a7a-ab6e-2947e8912a53",
+   "metadata": {},
+   "source": [
+    "## How to Change the Type of Input in Python"
    ]
   },
   {
@@ -672,6 +831,7 @@
     }
    ],
    "source": [
+    "# Taking input as string\n",
     "color = input(\"What color is rose?: \")\n",
     "print(color)"
    ]
@@ -698,6 +858,8 @@
     }
    ],
    "source": [
+    "# Taking input as int\n",
+    "# Typecasting to int\n",
     "n = int(input(\"How many roses?: \"))\n",
     "print(n)"
    ]
@@ -724,13 +886,23 @@
     }
    ],
    "source": [
+    "# Taking input as float\n",
+    "# Typecasting to float\n",
     "price = float(input(\"Price of each rose?: \"))\n",
     "print(price)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd35843c-13cd-40e8-b3ce-c5f136ea5833",
+   "metadata": {},
+   "source": [
+    "## Find DataType of Input in Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "132e48ef-eccb-40b5-9846-8c33bd4cded1",
    "metadata": {},
    "outputs": [
@@ -738,7 +910,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n",
       "<class 'str'>\n",
       "<class 'int'>\n",
       "<class 'float'>\n",
@@ -764,13 +935,21 @@
     "print(type(e))\n",
     "print(type(f))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c23518-2bde-4f36-bb60-94d6c132186e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
